feat: Add Mining RPC Service for pool server integration (Phase 1)
Implements Phase 1 of mining architecture refactoring: NodeMiningRpcService
interface that allows external pool servers to connect to XDAG node.

## New Components

### RPC Interface Layer
- NodeMiningRpcService: Interface defining RPC contract for pool servers
- MiningRpcServiceImpl: Implementation providing candidate blocks and validating submissions
- BlockSubmitResult: Result class for mined block submissions
- RandomXInfo: Status information for RandomX fork
- CandidateBlockCache: Thread-safe cache for validating pool submissions

### Key Features
1. **getCandidateBlock()**: Pool servers fetch candidate blocks every 64 seconds
2. **submitMinedBlock()**: Pools submit best mined blocks for validation
3. **getCurrentDifficultyTarget()**: Returns current network difficulty
4. **getRandomXInfo()**: Provides RandomX fork status and algorithm info

### Integration
- DagKernel now initializes MiningRpcService alongside MiningManager
- Maintains backward compatibility with existing mining functionality
- All 8 comprehensive tests pass successfully

## Architecture Benefits
- Clear separation between node and pool responsibilities
- Thread-safe concurrent pool connections supported
- Prepares codebase for future three-layer architecture (Node → Pool → Miner)

## Testing
- 8 comprehensive tests verify RPC interface functionality
- Tests confirm existing functionality not broken
- Validates concurrent pool access and cache management

Related documents:
- docs/design/MINING_ARCHITECTURE_REFACTORING.md (complete refactoring plan)
- docs/design/MINING_IMPROVEMENTS_SUMMARY.md (mining code review results)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>